# line-predictions

./: AGENTS.md  README.md  validate_improvements.py
data/processed/: player_lognorm_RB_2025_REG.json  player_lognorm_WR_2025_REG.json  team_defense_delta_RB_2025_REG.json  team_defense_delta_WR_2025_REG.json
data/raw/: team_pass_allowed_2025_REG.parquet  team_rush_allowed_2025_REG.parquet  weekly_RB_2025_REG.parquet  weekly_RB_usage_2025_REG.parquet  weekly_WR_2025_REG.parquet  (+1 more)
line_predictions/: README.md  pyproject.toml
line_predictions/src/line_predictions/: __init__.py  cli.py
reports/: EVALUATION_REPORT.md  EXECUTIVE_SUMMARY.txt  IMPROVEMENT_SUMMARY.md  IMPROVEMENT_SUMMARY_QUICK_REF.md  WEEK8_IMPROVEMENT_RECOMMENDATIONS.md  backtest_RB_2025_REG_train1-4_test5-6.csv  backtest_RB_2025_REG_train1-5_test6-6.csv  backtest_WR_2025_REG_train1-4_test5-6.csv  backtest_WR_2025_REG_train1-5_test6-6.csv  backtest_metrics_RB_2025_REG.json  backtest_metrics_WR_2025_REG.json  evaluation_summary.csv  improvement_testing_log_v2.txt  predictions_RB_2025_REG_week5.csv  predictions_RB_2025_REG_week6.csv  predictions_RB_2025_REG_week7.csv  predictions_RB_2025_REG_week8.csv  predictions_WR_2025_REG_week5.csv  predictions_WR_2025_REG_week6.csv  predictions_WR_2025_REG_week7.csv  predictions_WR_2025_REG_week8.csv  test_all_improvements.csv  test_idea1_sigma_calibration.csv  test_idea2_sigma_adjust.csv  test_idea3_usage.csv  week6_analysis_RB.csv  week6_analysis_WR.csv  week6_analysis_summary.json  week7_predictions_improved_algorithm.csv  week8_predictions_improved_algorithm.csv
