[project]
name = "line-predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jake Moses", email = "jake@pedestal.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "click>=8.3.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "nfl-data-py>=0.3.2",
    "nflreadpy>=0.1.3",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]

[project.scripts]
line-predictions = "line_predictions.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]
